[package]
name = "iot_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-iotdataplane = ">0.0.0"
futures = ">0.0.0"
futures-util = ">0.0.0"
aws-config = ">0.0.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3" }
blob = ">0.0.0"
http = ">0.0.0"
tracing = ">0.0.0"
tracing-chrome = ">0.0.0"